// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackupPhraseContainer renders correctly for input backup phrase 1`] = `
<View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Jost-Medium",
            "fontSize": 22,
            "lineHeight": 28,
            "marginBottom": 16,
          }
        }
      >
        writeDownKeyExperimental
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 10,
      }
    }
  >
    <TextInput
      autoCapitalize="none"
      autoCorrect={false}
      enablesReturnKeyAutomatically={true}
      multiline={true}
      onChangeText={[Function]}
      placeholder="backupPhrasePlaceholder"
      placeholderTextColor="#666666"
      shouldShowClipboard={[Function]}
      style={
        [
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
            "minHeight": 125,
            "padding": 14,
            "paddingTop": 16,
            "textAlignVertical": "top",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value="prosper winner find donate tape history measure umbrella agent patrol want rhythm old unable wash wrong need fluid hammer coach reveal plastic trust lake"
    />
  </View>
</View>
`;

exports[`BackupPhraseContainer renders correctly for readonly backup 12-word phrase 1`] = `
<View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Jost-Medium",
            "fontSize": 22,
            "lineHeight": 28,
            "marginBottom": 16,
          }
        }
      >
        writeDownKeyExperimental
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="prosper winner find donate tape history measure umbrella agent patrol want rhythm"
    style={
      {
        "alignContent": "center",
        "backgroundColor": "#F9F6F0",
        "borderRadius": 8,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
        "marginTop": 8,
        "padding": 8,
      }
    }
    testID="AccountKeyWordsContainer"
  >
    <View
      style={
        {
          "flexBasis": "30%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "3%",
          "marginVertical": 11,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "marginRight": 8,
          }
        }
      >
        1
      </Text>
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        prosper
      </Text>
    </View>
    <View
      style={
        {
          "flexBasis": "30%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "3%",
          "marginVertical": 11,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "marginRight": 8,
          }
        }
      >
        2
      </Text>
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        winner
      </Text>
    </View>
    <View
      style={
        {
          "flexBasis": "30%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "3%",
          "marginVertical": 11,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "marginRight": 8,
          }
        }
      >
        3
      </Text>
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        find
      </Text>
    </View>
    <View
      style={
        {
          "flexBasis": "30%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "3%",
          "marginVertical": 11,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "marginRight": 8,
          }
        }
      >
        4
      </Text>
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        donate
      </Text>
    </View>
    <View
      style={
        {
          "flexBasis": "30%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "3%",
          "marginVertical": 11,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "marginRight": 8,
          }
        }
      >
        5
      </Text>
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        tape
      </Text>
    </View>
    <View
      style={
        {
          "flexBasis": "30%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "3%",
          "marginVertical": 11,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "marginRight": 8,
          }
        }
      >
        6
      </Text>
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        history
      </Text>
    </View>
    <View
      style={
        {
          "flexBasis": "30%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "3%",
          "marginVertical": 11,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "marginRight": 8,
          }
        }
      >
        7
      </Text>
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        measure
      </Text>
    </View>
    <View
      style={
        {
          "flexBasis": "30%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "3%",
          "marginVertical": 11,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "marginRight": 8,
          }
        }
      >
        8
      </Text>
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        umbrella
      </Text>
    </View>
    <View
      style={
        {
          "flexBasis": "30%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "3%",
          "marginVertical": 11,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "marginRight": 8,
          }
        }
      >
        9
      </Text>
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        agent
      </Text>
    </View>
    <View
      style={
        {
          "flexBasis": "30%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "3%",
          "marginVertical": 11,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "marginRight": 8,
          }
        }
      >
        10
      </Text>
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        patrol
      </Text>
    </View>
    <View
      style={
        {
          "flexBasis": "30%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "3%",
          "marginVertical": 11,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "marginRight": 8,
          }
        }
      >
        11
      </Text>
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        want
      </Text>
    </View>
    <View
      style={
        {
          "flexBasis": "30%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "3%",
          "marginVertical": 11,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
            "marginRight": 8,
          }
        }
      >
        12
      </Text>
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
      >
        rhythm
      </Text>
    </View>
  </View>
</View>
`;

exports[`BackupPhraseContainer renders correctly for readonly backup 24-word phrase 1`] = `
<View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Jost-Medium",
            "fontSize": 22,
            "lineHeight": 28,
            "marginBottom": 16,
          }
        }
      >
        writeDownKeyExperimental
      </Text>
    </View>
  </View>
  <View
    accessibilityLabel="prosper winner find donate tape history measure umbrella agent patrol want rhythm old unable wash wrong need fluid hammer coach reveal plastic trust lake"
    style={
      {
        "alignContent": "center",
        "backgroundColor": "#F9F6F0",
        "borderRadius": 8,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
        "marginTop": 8,
        "padding": 8,
      }
    }
    testID="AccountKeyWordsContainer"
  >
    <Text
      style={
        {
          "color": "#2E3338",
          "fontFamily": "Inter-Regular",
          "fontSize": 22,
          "lineHeight": 32,
        }
      }
    >
      prosper winner find donate tape history measure umbrella agent patrol want rhythm old unable wash wrong need fluid hammer coach reveal plastic trust lake
    </Text>
  </View>
</View>
`;
